--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 		<link href="https://fonts.googleapis.com/css2?family=Space+Mono&display=swap" rel="stylesheet">
 
 		<!-- SCRIPTS -->
+		
+		<script src="scripts/Counter.js"></script>
 		<script src="scripts/Cell.js"></script>
 		<script src="scripts/CentralObject.js"></script>
 		<script src="scripts/Player.js"></script>
